--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="cryptoworld">CryptoWorld</string>
     <string name="title">Title</string>
     <string name="price_value">Price Value</string>
+    <string name="this_is_empty_tap_to_reload">This is empty, Tap to reload</string>
 </resources>
